--- a/source/stylesheets/elements/_animations.scss
+++ b/source/stylesheets/elements/_animations.scss
@@ -11,3 +11,17 @@
 	}
 
 }
+
+@keyframes masthead-caption {
+
+	0% {
+		opacity: 0;
+	    transform: scale(1.2) translateY(-35px);
+	}
+
+	100% {
+		opacity: 1;
+	    transform: scale(1) translateY(0);
+	}
+}
+
