--- a/source/stylesheets/partials/_typography.scss
+++ b/source/stylesheets/partials/_typography.scss
@@ -26,6 +26,10 @@
   color:$dark-text-color;
 }
 
+.white-text-color{
+  color:white;
+}
+
 
 
 //alerts
@@ -101,6 +105,10 @@ h1{
   font-size:57px;
   line-height:69px;
   font-family:$regular-font-name;
+  @include breakpoint(sm) {
+    font-size:47px;
+    line-height:50px;
+  }
 }
 
 h2{
@@ -111,7 +119,7 @@ h2{
 
 h3{
   font-size:27px;
-  line-height:35px;
+  line-height:28px;
   font-family:$regular-font-name;
 }
 
