--- a/source/stylesheets/partials/_variables.scss
+++ b/source/stylesheets/partials/_variables.scss
@@ -10,10 +10,10 @@ $tertiary-color: #26C164;
 $off-white-color: #FAFBFC;
 
 //Tbl row selected, Dropdown hover
-$off-white-dark-color: #F5F8FA;
+$off-white-dark-color: #F5F5F5;
 
 //Borders, Tbl header, light icons
-$off-white-darker-color: #E6EAEE;
+$off-white-darker-color: #EDEDED;
 
 //Buttin borders, checkbox borders,
 $lightest-gray-color: #B4BBC6;
@@ -63,7 +63,7 @@ $border-color: $off-white-darker-color;
 $baseline: 16px;
 $base-border-radius:0px;
 $base-font-size:18px;
-$navbar-height:112px;
+$navbar-height:92px;
 
 
 // font vars
