--- a/source/stylesheets/elements/_header.scss
+++ b/source/stylesheets/elements/_header.scss
@@ -1,9 +1,19 @@
 #primary-nav{
+	.contact-button{
+		padding-right: 1rem;
+		padding-left: 1rem;
+	}
 	&.bg-primary{
 		background-color:$primary-color!important;
 	}
 	.navbar-brand{
 		@include transition-duration(.2s);
+		@include breakpoint(sm) {
+			svg{
+				width:50px;
+				height:50px;
+			}
+		}
 	}
 	.navbar-nav{
 		
@@ -15,10 +25,14 @@
 			letter-spacing:.5px;
 			line-height:20px;
 			a{
+				@include transition-duration(.2s);
 				color:white;
 				&.nav-link{
-					padding:0;
+					padding:2px 0;
 					margin:0 30px;
+				}
+				&.active{
+					box-shadow:inset 0 -2px 0 white;
 				}
 			}
 			&.active{
