--- a/source/stylesheets/partials/_base.scss
+++ b/source/stylesheets/partials/_base.scss
@@ -11,7 +11,7 @@ html {
 }
 
 body{
-  border:calc(var(--body-border-width, 20px) * 1 / 1 + 0px) solid $primary-color;
+  border:20px solid $primary-color;
   font: 100%;
   font-size:$base-font-size;
   color: $text-color;
@@ -27,6 +27,13 @@ body{
   font-weight:400;
   background-color:$background-color;
   padding-top:$navbar-height;
+  position:relative;
+
+  @include breakpoint(sm) {
+    border:10px solid $primary-color;
+    border-bottom:none;
+    padding-top:75px;
+  }
   &:before,&:after{
     z-index: 100;
     content: '';
