--- a/source/stylesheets/partials/_links_buttons.scss
+++ b/source/stylesheets/partials/_links_buttons.scss
@@ -1,5 +1,9 @@
 a{
 	color:$link-color;
+	&:active, &:focus{
+			outline:none;
+			box-shadow:none;
+		}
 }
 
 .btn{
@@ -100,6 +104,20 @@ a{
 		}
 		i{
 			font-size:52px;
+		}
+		&:active, &:focus{
+			outline:none;
+			box-shadow:none;
+		}
+	}
+	&.btn-outline-light {
+		color:white!important;
+		&.active{
+			background:transparent!important;
+		}
+		&:hover{
+			color:$primary-color!important;
+			background:white!important;
 		}
 	}
 }
